# VisualSearch

./: .gitignore  JustFile  README.md  config.yaml  pyproject.toml
bentoml/blip-service/: bentofile.yaml  service.py
load_testing/: __init__.py  locust.yaml
load_testing/bentoml/: __init__.py  locustfile.py
load_testing/fastapi/: __init__.py  locustfile.py
mk_docs/: mkdocs.yml
mk_docs/docs/: about.md  api.md  architecture.md  index.md  introduction.md  locust.md  setup.md  technical.md
model/: VLM.py  __init__.py  request_models.py
searcher/: BM25.py  __init__.py  request_models.py  utils.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx
ui/src/components/: LazyVideo.jsx  Navbar.jsx  UploadImage.jsx
unified_logging/: __init__.py  config_types.py  logging_client.py  logging_config.toml  logging_server.py  start_logging_server.py
