[project]
name = "visualsearch"
version = "0.1.0"
description = "Ahh may god help me"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.5",
    "fastapi[all]>=0.115.11",
    "locust>=2.33.2",
    "moviepy>=1.0.3",
    "pillow>=11.1.0",
    "pyyaml>=6.0.2",
    "tantivy>=0.22.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
    "zmq>=0.0.0",
    "huggingface-hub>=0.29.2",
    "loguru>=0.7.3",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.9",
    "mkdocs-minify-plugin>=0.8.0",
    "moviepy>=1.0.3",
    "pillow>=11.1.0",
]

[tool.uv.sources]
torch = [
    # If you want a CPU-only version of PyTorch, replace the next line with this one:
    # { index = "pytorch-cpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },

    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    # If you want a CPU-only version of PyTorch, replace the next line with this one:
    # { index = "pytorch-cpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },

    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

# ruff
[tool.ruff]
line-length = 120
exclude = [
    "build",
    "dist",
    "venv",
    ".tox",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    ".vscode",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".idea",
]

[tool.ruff.lint]
select = ["ALL"]
